# euler-hs

./: .gitignore  BEAM_NOTES.md  BRANCHING-POLICY.md  BUILD.md  CHANGELOG.md  CODESTYLE.md  ChangeLog.md  Jenkinsfile  LICENSE  README.md  TUTORIAL.md  UPGRADE.md  build.nix  cabal.project  default.nix  docker-compose-dev.yml  docker-compose.yml  euler-hs.cabal  euler-hs.nix  euler.yaml  flake.nix  hie.yaml  package.yaml  risk_check_xml_samples.output  runEulerBackend.sh  shell.nix  stack.yaml
app/CreditPlatform/: API.hs
app/CreditPlatform/Domain/: Types.hs
app/CreditPlatform/Services/API/: Types.hs
app/EulerHS/: App.hs  Main.hs
app/analytics-dashboard/: analytics-dashboard.cabal  package.yaml
app/analytics-dashboard/src/: Main.hs
app/analytics-dashboard/src/Console/: API.hs  Env.hs  Query.hs
app/analytics-dashboard/test/: Main.hs
app/analytics-dashboard/test/Test/: Fixtures.hs  Query.hs
app/console/: Dockerfile  package.yaml
app/console/config/: console.dhall.sample
app/console/src/: Main.hs
app/console/src/Console/: API.hs  Config.hs  HTTPServer.hs
app/console/test/: Main.hs
app/console/test/Test/: Fixtures.hs  Query.hs
app/credit-platform/: package.yaml
app/credit-platform/src/: App.hs
app/credit-platform/src/CreditPlatform/: Server.hs
app/credit_platform/: App.hs  Main.hs
app/credit_platform/CreditPlatform/: API.hs  Domain.hs
app/credit_platform/CreditPlatform/Domain/: Types.hs
app/credit_platform/Services/API/: AA.hs  AAAPIs.hs  FINVU.hs  Types.hs
app/euler-backend/: NOTEPAD.md  art.sh  euler-backend.cabal  package.yaml
app/euler-backend/app/: EulerBackend.hs
app/euler-backend/bench/: Main.hs
app/euler-backend/bench/Euler/: OrderStatus.hs
app/euler-backend/src/: App.hs  LoadTest.hs  Main.hs
app/euler-backend/src/Euler/: AppEnv.hs  Constants.hs  Encryption.hs  GenericLensTH.hs  Lens.hs  Order.md  Server.hs
app/euler-backend/test/: Main.hs
docs/: CachingLayer.md  DatabaseLayer.md
fixtures/masking/: maskingData.json
haddock/: EulerHS-CachedSqlDBQuery.html  EulerHS-Extra-AltValidation.html  EulerHS-Extra-NonEmptyText.html  EulerHS-Extra-Secret.html  EulerHS-Extra-Test.html  EulerHS-Extra-Validation.html  EulerHS-Interpreters.html  EulerHS-Language.html  EulerHS-Runtime.html  EulerHS-Types.html  doc-index-124.html  doc-index-33.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-63.html  doc-index-94.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  (+16 more)
init/: Dockerfile.mysql  Dockerfile.postgres  Dockerfile.stack  psqldump.sql
k8s-configs/: console-deploy.yaml
lib/dashboard/: package.yaml
lib/dashboard/test/: Main.hs
lib/dashboard/test/Test/: SQL.hs
lib/euler-hs/: euler-hs.cabal  package.yaml  test.db
lib/euler-hs/kvdb-test/: Main.hs
lib/euler-hs/src/EulerHS/: Language.hs  Prelude.hs  Runtime.hs  Types.hs
lib/euler-hs/test/: Main.hs
lib/euler-hs/test/EulerHS/: Helpers.hs  TestData.hs
lib/euler-hs/testDB/: Main.hs
lib/euler-hs/testDB/KVDB/: KVDBSpec.hs
lib/euler-hs/testSqlDB/: Main.hs
lib/web-service/: package.yaml  web-service.cabal
lib/web-service/test/: Main.hs
nix/: 0001-Bump-bounds-for-beam-migrate-on-dependent-haskell-sr.patch  0001-Bump-hashable-bound-for-mysql-sqlite.patch  amazonka-kms.nix  amazonka.nix  beam-mysql.nix  beam-postgres.nix  config.nix  console-docker.nix  crc16.nix  cryptostore.nix  euler-backend-storage.nix  euler-gen-info  hedis.nix  nixpkgs.json  overlay.nix  purescript-bridge.nix  servant-xml.nix  sources.json  universum.nix  update.nix  xmlbf-xeno.nix
nix/euler-build/: default.nix  mk-shell.nix
nix/overlays/: beam.nix  code-tools.nix  devtools.nix  euler-hs.nix  ghc.nix
src/Dashboard/Query/: Types.hs
src/EulerHS/: Api.hs  BinaryString.hs  CachedSqlDBQuery.hs  HttpAPI.hs  Interpreters.hs  Language.hs  Lib.hs  Masking.hs  Prelude.hs  Serializable.hs  Types.hs
src/EulerHS/Core/: Api.hs  Interpreters.hs  Masking.hs  Runtime.hs  Types.hs
src/EulerHS/Extra/: Aeson.hs  AltValidation.hs  BL.hs  Combinators.hs  Config.hs  ConnectionTimeOutMetric.hs  Control.hs  DB.hs  EulerDB.hs  Language.hs  NonEmptyText.hs  Parsing.hs  Regex.hs  Secret.hs  Test.hs  Text.hs  Time.hs  URLSanitization.hs  Validation.hs
src/EulerHS/Framework/: Interpreter.hs  Language.hs  Runtime.hs
src/EulerHS/KVConnector/: DBSync.hs  Encoding.hs  Flow.hs  Metrics.hs  Types.hs  Utils.hs
src/EulerHS/KVDB/: Interpreter.hs  Language.hs  Types.hs
src/EulerHS/Logger/: Interpreter.hs  Language.hs  Runtime.hs  TinyLogger.hs  Types.hs
src/EulerHS/SqlDB/: Language.hs  Types.hs
test/: Main.hs
test/EulerHS/Testing/: HSLog.hs  PSLog.hs  Util.hs
test/Test/Framework/: Language.hs
test/extra/: Options.hs
test/language/: ArtSpec.hs  CachedDBSpec.hs  Client.hs  Common.hs  DBSetup.hs  FlowSpec.hs  KVDBArtSpec.hs  Main.hs  MaskingSpec.hs  PSMessageFormatterSpec.hs  PSMimicLogger.hs  PubSubSpec.hs  SQLArtSpec.hs  Scenario1.hs
test/language/KV/: FindOneSpec.hs  FindSpec.hs  FlowHelper.hs  InsertSpec.hs  Mesh.hs  SckvSpec.hs  Sctest.hs  TestHelper.hs  ThUtils.hs
test/language/cert/: README.md  sample1.crt  sample1.csr  sample1.key
test/tls/: Dockerfile  README.md  build.sh  index.txt  openssl.cnf  run.sh
test/tls/ca-certificates/: cacert.pem  cacert.v1.pem
test/tls/client/: cert_key.p12  client.cert.pem  client.csr  client.key.pem  client.v1.cert.pem  client.v1.csr  client.v1.key.pem
test/tls/server/: httpd-ssl.conf  httpd.conf  server.cert.pem  server.csr  server.key.pem  server.v1.cert.pem  server.v1.csr  server.v1.key.pem
testDB/: Main.hs
testDB/KVDB/: KVDBSpec.hs
testDB/SQLDB/TestData/: Connections.hs  Types.hs
testDB/SQLDB/Tests/: MySQLDBSpec.hs  SQLiteDBSpec.hs
(+499 files in other folders)
