cabal-version:       2.4
name:                euler-hs
version:             0.0.1
synopsis:            Services, Backend
license:             NONE
license-file:        LICENSE
author:              Juspay Technologies Private Limited
category:            System
extra-source-files:  CHANGELOG.md


executable selftest-app
  main-is:             Main.hs
  ghc-options:
    -O2
    -Wall
    -threaded
    -with-rtsopts=-N
    -fspec-constr-recursive=10
    -fno-ignore-asserts
    -ddump-minimal-imports

  other-modules:
  build-depends:      base
                    , aeson
                    , bytestring
                    , containers
                    , errors
                    , extra
                    , hashable
                    , mtl
                    , network
                    , optparse-applicative
                    , text
                    , transformers
                    , unordered-containers
                    , lens
                    , http-client
                    , messagepack
                    , cereal
                    , time
                    , newtype
                    , monad-loops
                    , http-types
                    , attoparsec
                    , scientific
                    , stm
                    , named
                    , tagged
                    , time-units
                    , aeson-pretty
                    , cryptonite
                    , base16-bytestring
                    , base58-bytestring
                    , base64-bytestring
                    , process
                    , vector
                    , random
                    , free
                    , async
                    , haskeline
                    , cryptohash-sha256
                    , bytestring-conversion
--                    , universum
                    , fmt
                    , lens-aeson
                    , uuid
                    , safe-exceptions

  hs-source-dirs:      src/selftest-app
  default-language:    Haskell2010
  default-extensions:
    GADTs
    RankNTypes
    DeriveFunctor
    DeriveGeneric
    OverloadedStrings
    LambdaCase
    MultiParamTypeClasses
    ExplicitNamespaces
    TypeApplications
    ScopedTypeVariables
    TypeOperators
    TypeFamilies
    DataKinds
    FlexibleContexts
    FlexibleInstances
    PatternSynonyms
    PolyKinds
    DefaultSignatures
    ConstraintKinds
    NamedFieldPuns
    TupleSections
    ViewPatterns
    MultiWayIf
    DerivingStrategies
    InstanceSigs
